--- a/netflix/src/App.css
+++ b/netflix/src/App.css
@@ -1,5 +1,6 @@
 :root {
   --btn-red: #e50914;
+  --btn-red-2: #e40914;
   --btn-white: #fffff7;
   --landing-h1: 3.125rem;
   --landing-p: 1.625rem;
@@ -103,4 +104,92 @@ p {
 .holder-3 {
   display: flex;
   justify-content: center;
+}
+
+.email-holder {
+  display: flex;
+  justify-content: center;
+  margin: 1rem 0rem 2.5rem 0rem;
+}
+
+.email-holder-contain {
+  width: 43rem;
+  display: flex;
+}
+
+.cta-b {
+  width: 65%;
+}
+.landing-email-input {
+  padding: 1rem;
+  min-height: 60px;
+  width: 100%;
+  white-space: none;
+  margin-top: 0rem;
+}
+
+.landing-email-btn {
+  background-color: var(--btn-red-2);
+  font-family: var(--font-family-sans);
+  padding: 0.5rem 1.8rem;
+  color: var(--btn-white);
+  border: none;
+  font-size: var(--landing-p);
+  min-height: 60px;
+}
+
+.landing-email-btn:hover {
+  background: #f40612;
+  box-shadow: 0 1px 0 rgb(0 0 0 / 45%);
+  cursor: pointer;
+}
+
+.landing-email-btn:focus {
+  background: #f40612;
+  box-shadow: 0 1px 0 rgb(0 0 0 / 55%);
+}
+
+.s-email {
+  font-size: 1.2rem;
+}
+
+.cta {
+  padding-right: 0.5rem;
+}
+
+@media screen and (max-width: 950px) {
+  /* landing page */
+  .email-holder-contain {
+    width: 43rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .landing-email-btn {
+    min-height: 40px;
+    font-size: var(--btn-font-text-1);
+    padding: 0 1rem;
+    margin-top: 1.5rem;
+  }
+
+  .landing-email-input {
+    min-height: 40px;
+  }
+
+  .s-email {
+    font-size: var(--btn-font-text-2);
+  }
+
+  .cta-b {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  /* landing page */
+  .email-holder-contain {
+    padding: 0;
+    width: 100%;
+  }
 }
