--- a/netflix/src/App.css
+++ b/netflix/src/App.css
@@ -5,5 +5,6 @@
 body {
   padding: 0;
   margin: 0;
-  background-color:  #aaa;
+  background-image: linear-gradient(180deg,rgba(0,0,0,.7) 30%,transparent);
+  background-color: black;
 }
