--- a/netflix/src/App.css
+++ b/netflix/src/App.css
@@ -340,6 +340,29 @@ input:valid ~ .floating-label {
   margin: 0.75em 0 0.25em;
 }
 
+/* landing page kids */
+
+.kids-img {
+  border: 0;
+  height: auto;
+  max-width: 100%;
+  padding-right: 1.5rem;
+}
+
+.kids-h1 {
+  font-size: var(--landing-h1);
+  font-weight: var(--font-weight-500);
+  color: var(--btn-white);
+}
+
+.kids-h2 {
+  font-size: 1.5rem;
+  font-family: var(--font-family-sans);
+  font-weight: var(--font-weight-400);
+  color: var(--btn-white);
+  margin: 0.75em 0 0.25em;
+}
+
 @media screen and (max-width: 1200px) {
   .download-img {
     padding-left: 2.5rem;
@@ -349,14 +372,16 @@ input:valid ~ .floating-label {
   /* landing page enjoy */
   .enjoy-h1,
   .dn-h1,
-  .watch-h1 {
+  .watch-h1,
+  .kids-h1 {
     font-size: 2.6rem;
     font-weight: 700;
   }
 
   .enjoy-p,
   .dn-h2,
-  .watch-h2 {
+  .watch-h2,
+  .kids-h2 {
     font-size: 1.3rem;
   }
 }
@@ -404,14 +429,16 @@ input:valid ~ .floating-label {
 
   .enjoy-h1,
   .dn-h1,
-  .watch-h1 {
+  .watch-h1,
+  .kids-h1 {
     text-align: center;
     font-size: 2.4rem;
   }
 
   .enjoy-p,
   .dn-h2,
-  .watch-h2 {
+  .watch-h2,
+  .kids-h2 {
     text-align: center;
     font-size: 1.2rem;
   }
@@ -440,6 +467,11 @@ input:valid ~ .floating-label {
 
   .download-card-custom {
     height: 2.8em;
+  }
+
+  /* kids */
+  .kids-img {
+    padding-right: 0rem;
   }
 }
 
@@ -495,13 +527,15 @@ input:valid ~ .floating-label {
   /* landing page donwload */
   .enjoy-h1,
   .dn-h1,
-  .watch-h1 {
+  .watch-h1,
+  .kids-h1 {
     font-size: 1.625rem;
   }
 
   .enjoy-p,
   .dn-h2,
-  .watch-h2 {
+  .watch-h2,
+  .kids-h2 {
     font-size: 1.125rem;
   }
 
@@ -564,7 +598,7 @@ input:valid ~ .floating-label {
   }
 }
 
-@media screen (width: 280px) and (height: 653px) {
+@media screen and (width: 280px) and (height: 653px) {
   /* landing page download*/
   .small-img {
     height: 1.5em;
